--- a/css/core.css
+++ b/css/core.css
@@ -217,4 +217,5 @@ h1>a{
 	-webkit-text-stroke-width: 0px;
 	-webkit-text-stroke-color: black;
 	color: white;
-	text-shadow: 0px 0px 3px white,0px 0px 3px white,0px 0px 3px white,0px 0px 8px #553300,0px 0px 8px #553300;}
+	text-shadow: 0px 0px 3px white,0px 0px 3px white,0px 0px 3px white,0px 0px 8px #553300,0px 0px 8px #553300;
+	}
