--- a/css/animate.css
+++ b/css/animate.css
@@ -74,8 +74,7 @@
 		
 	90%{
 		-webkit-transform:translate3d(0,-4px,0);
-		transform:translate3d(0,-4px,0)
-		;
+		transform:translate3d(0,-4px,0);
 		}
 	}
 	
