--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 @import url('https://fonts.googleapis.com/css?family=Orbitron&display=swap');
 
 .glitch {
-  font-family: 'Press Start 2P', cursive;
+  font-family: 'Pompadur', cursive;
   position: relative;
   margin: 0 auto;
   background: #000000;
