--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,44 @@
 /* newtype stylesheet */
-/* god is a girl */
+
+@import url(https://fonts.googleapis.com/css?family=Press+Start+2P);
+@import url(https://fonts.googleapis.com/css?family=Libre+Barcode+39);
+@import url('https://fonts.googleapis.com/css?family=Orbitron&display=swap');
+html, body {
+  height: 100%;
+}
+
+body {
+  line-height: 1;
+  /* background-color:#000000; */
+  margin: 0;
+  background: #000000;
+  color: #ffffff;
+  background-color: #000000;
+}
+
+.center {
+  display: flex;
+  -webkit-animation: fade 7s alternate;
+  animation: fade 7s alternate;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+}
+
+h1 {
+  display: block;
+  font-size: 3em;
+  margin: 0.6em 0;
+  font-weight: bold;
+}
+.code {
+	font-family: 'Libre Barcode 39', cursive;;
+	position: absolute;
+	color: #000000;
+}
 
 .glitch {
-  font-family: 'Pompadur', cursive;
+  font-family: 'Press Start 2P', cursive;
   position: relative;
   margin: 0 auto;
   background: #000000;
@@ -307,3 +343,93 @@
     clip: rect(38px, 9999px, 49px, 0);
   }
 }
+
+img {
+  -webkit-animation: fade 5s alternate;
+  animation: fade 5s alternate;
+  display: block;
+}
+
+.artwork {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 25%;
+}
+
+@-webkit-keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+img {
+  -webkit-animation: fade 5s alternate ;
+  animation: fade 5s alternate ;
+  display: block;
+}
+
+.awrapper{
+	align-content:center;
+	background-size:cover;
+	display:flex;
+	display:-ms-flexbox;
+	display:-webkit-flex;
+	flex-direction:row;
+	flex-wrap:wrap;
+	justify-content:center;
+	min-height:100%;ms-flex-direction:row;
+	ms-flex-line-pack:center;
+	ms-flex-pack:center;
+	ms-flex-wrap:wrap;
+	webkit-align-content:center;
+	webkit-flex-direction:row;
+	webkit-flex-wrap:wrap;
+	webkit-justify-content:center;
+	}
+	
+.titles{
+
+	text-align:center;
+	width:100%;
+	}
+
+.pageoverlay{
+	display:block;
+	height:100%;
+	left:0;
+	overflow:hidden;
+	position:fixed;
+	top:0;
+	width:100%;
+	}
+	
+.overlay:after{
+		position:absolute;
+		content:'';
+		width:100%;
+		height:100%;
+		top:0;
+		left:0;
+		min-height:100%;
+		background:url(../images/overlay.png);
+		background-repeat:repeat;
+		}
+.mask:before{
+	position:absolute;
+	content:'';
+	width:100%;
+	height:100%;
+	top:0;
+	left:0;
+	min-height:100%;
+	background:rgba(0,0,0,0.5);
+	}
+	
+.lightbox{
+	color:#FFFFFF;
+	margin:18% auto;
+	}
