--- a/css/pageoverlay.css
+++ b/css/pageoverlay.css
@@ -1,44 +1,3 @@
-html{
-	height:100%;
-	width:100%;
-	}
-body{
-	background:#000000;
-	}
-video{
-	position:fixed;
-	top:50%;
-	left:50%;
-	min-width:100%;
-	min-height:100%;
-	width:auto;
-	height:auto;
-	z-index:-9999;
-	transform:translateX(-50%) translateY(-50%);
-	background-size:cover;
-	transition:1s opacity;
-	}
-	.video{
-		overflow:hidden;
-		}
-		.video-fall{
-			position:absolute;
-			top:0px;
-			left:0px;
-			width:100%;
-			height:100%;
-			overflow:hidden;
-			}
-			.volume-button, .stop-button{
-				font-size:18px;
-				position:relative;
-				z-index:25;
-				top:20px;
-				left:49%;
-				cursor:pointer;
-				color:#fff;
-				}
-				
 .pageoverlay{
 	display:block;
 	height:100%;
@@ -105,9 +64,6 @@ hr{
 	color:#000000;
 	text-decoration:none;
 	}
-html,body{
-	height:100%;
-	}
 *,*:before,*:after{
 	-webkit-box-sizing:border-box;
 	-moz-box-sizing:border-box;
@@ -115,13 +71,6 @@ html,body{
 	}
 *{
 	outline:none;
-	}
-body{
-	background:#000000 no-repeat center bottom;
-	color:#FFFFFF;
-	font:normal 16px/1.2 unseen,sans-serif;
-	margin:0;
-	text-shadow:2px 2px #000000;
 	}
 .awrapper{
 	align-content:center;
@@ -151,7 +100,7 @@ a{
 	text-decoration:none;
 	}
 a:hover,a:active{
-	color:#FF0000;
+	color:#00d8ff;
 	outline:none;
 	}
 .titles{
