--- a/css/pageoverlay.css
+++ b/css/pageoverlay.css
@@ -15,7 +15,7 @@
 		top:0;
 		left:0;
 		min-height:100%;
-		background:url(../images/overlay.png);
+		background:url(../img/overlay.png);
 		background-repeat:repeat;
 		}
 .mask:before{
