--- a/css/style.css
+++ b/css/style.css
@@ -618,7 +618,7 @@ img {
 		top:0;
 		left:0;
 		min-height:100%;
-		background:url(../images/overlay.png);
+		background:url(../img/overlay.png);
 		background-repeat:repeat;
 		}
 .mask:before{
